# pdf-agent

./: .env.example  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
app/: agent.py  setting.py
app/api/v1/: agent.py  document.py  router.py
app/core/: document_loader.py  llm_engine.py  ocr_tools.py  vector_db.py
app/core/embedding/: __init__.py  embedding_engine.py
app/db/: milvus.py  session.py
app/models/: document.py
app/schemas/: common.py  document.py
app/service/: document_service.py
data/: .milvus_schema_v2_jieba
ui/: gradio_app.py
