[project]
name = "pdf-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.14.1",
    "fastapi>=0.139.0",
    "gradio>=6.20.0",
    "httpx>=0.28.1",
    "jieba>=0.42.1",
    "loguru>=0.7.3",
    "openai>=2.45.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "pymilvus>=3.0.0",
    "python-multipart>=0.0.32",
    "sqlalchemy>=2.0.51",
    "uvicorn>=0.51.0",
]
